# deob

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
examples/: entries.txt
src/: animator.rs  charset.rs  cli.rs  layout.rs  lib.rs  main.rs
src/integrations/: mod.rs
tests/: animator_tests.rs  charset_tests.rs  columns_tests.rs  integrations_tests.rs
